Criando a tabela aluno e iniciando o CRUD alunos, bem como inclusão das rotas no arquivo de documentação Swagger.json
